--- a/templates/result.html
+++ b/templates/result.html
@@ -4,14 +4,14 @@
 	<title></title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
-<body>
+<body style="background-color:#c7abd8">
 
 	<header>
 		<div class="container">
 		<div id="brandname">
 			ML App
 		</div>
-		<h2>Sentiment Prediction for Products Reviews</h2>
+		<h2 style="color:#DDD;background-color:#333;">Sentiment Prediction for Products Reviews</h2>
 		
 	</div>
 	</header>
